# voltaire

./: .dockerignore  .flake8  .gitignore  .pdm.toml  Dockerfile  README.md  boot.py  funding.json  init-params  init.py  main.py  pyproject.toml  requirements.txt
bundler/: bundle_manager.py  bundler_endpoint.py  exceptions.py  execution_endpoint.py  mempool_manager.py  reputation_manager.py  sender.py  validation_manager.py
bundler_endpoint/: bundler_endpoint.py  eth_client_utils.py  mempool.py  sender.py  validation_manager.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: modules.doctree  voltaire_bundler.doctree  voltaire_bundler.event_bus_manager.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: dataclasses.html  index.html
docs/_build/html/_static/: documentation_options.js
docs/source/: modules.rst  voltaire_bundler.event_bus_manager.rst
rpc/: events.py  exceptions.py  rpc_http_server.py
scripts/: build_p2p.py  deploy.js  init-geth.py  init-params  lint.py  run-geth.sh
test/: UTC--2023-03-18T02-55-19.233236728Z--084178a5fd956e624fcb61c3c2209e3dcf42c8e8  deploy.js  init-params
tests/: conftest.py  test_rpc.py  utils.py
user_operation/: entrypoint_structs.py  erc4337_utils.py  estimate_user_operation_gas.py  get_user_operation.py  models.py  receipt_models.py  send_user_operation.py  user_operation.py  user_operation_handler.py
utils/: BundlerCollectorTracer.js  BundlerCollectorTracer.min.js  BundlerHelper.json  EntryPoint.json  eth_client_utils.py  helper.py  import_key.py
voltaire_bundler/: .dockerignore  boot.py  cli_manager.py  execution_endpoint.py  main.py  p2p_boot.py  typing.py
voltaire_bundler/bundle/: bundle_manager.py  exceptions.py
voltaire_bundler/bundler/: bundle_manager.py  exceptions.py  execution_endpoint.py  gas_manager.py  mempool_manager.py  reputation_manager.py  sender.py  sender_mempool.py  validation_manager.py
voltaire_bundler/bundler/bundle/: bundle_manager.py
voltaire_bundler/bundler/mempool/: mempool_info.py  mempool_manager.py  mempool_member.py  sender_mempool.py
voltaire_bundler/bundler/validation/: BundlerCollectorTracer.js  BundlerCollectorTracer.min.js  validation_manager.py
voltaire_bundler/contracts/: BundlerHelper.json  BundlerHelper.sol  EntryPointMinBlock.sol  EntryPointSimulationsV6.json  EntryPointSimulationsV6.sol  EntryPointSimulationsV6Arb.json  EntryPointSimulationsV6Arb.sol  EntryPointSimulationsV6WithBinarySearch.json  EntryPointSimulationsV6WithBinarySearch.sol  EntryPointSimulationsV7.json  EntryPointSimulationsV7.sol  EntryPointSimulationsV7Arb.json  EntryPointSimulationsV7Arb.sol  EntryPointSimulationsV7WithBinarySearch.json  EntryPointSimulationsV7WithBinarySearch.sol  EntryPointSimulationsV8.json  EntryPointSimulationsV8.sol  EntryPointSimulationsV8WithBinarySearch.json  EntryPointSimulationsV8WithBinarySearch.sol
voltaire_bundler/event_bus_manager/: endpoint.py  events.py
voltaire_bundler/gas/: gas_manager.py  gas_manager_v6.py  gas_manager_v7v8.py
voltaire_bundler/gas/v6/: gas_manager_v6.py
voltaire_bundler/gas/v7/: gas_manager_v7.py
voltaire_bundler/mempool/: mempool_info.py  mempool_manager.py  mempool_manager_v6.py  mempool_manager_v7.py  mempool_manager_v8.py  reputation_manager.py  sender_mempool.py
voltaire_bundler/mempool/v6/: mempool_manager_v6.py
voltaire_bundler/mempool/v7/: mempool_manager_v7.py
voltaire_bundler/metrics/: metrics.py
voltaire_bundler/rpc/: events.py  health.py  jsonrpc.py  rpc_http_server.py
voltaire_bundler/user_operation/: models.py  user_operation.py  user_operation_handler.py  user_operation_handler_v6.py  user_operation_handler_v7v8.py  user_operation_v6.py  user_operation_v7v8.py
voltaire_bundler/user_operation/v6/: user_operation_handler_v6.py  user_operation_v6.py
voltaire_bundler/user_operation/v7/: user_operation_handler_v7.py  user_operation_v7.py
voltaire_bundler/utils/: BundlerCollectorTracer.js  BundlerHelper.json  EntryPointMod.json  EntryPointMod.sol  GasHelper.sol  GasLeft.json  GasLeft.sol  SignalHaltError.py  decode.py  eip7702.py  encode.py  eth_client_utils.py  import_key.py  load_bytecode.py
voltaire_bundler/validation/: BundlerCollectorTracer.js  tracer_manager.py  validation_manager.py  validation_manager_v6.py  validation_manager_v7v8.py
voltaire_bundler/validation/v6/: validation_manager_v6.py
voltaire_bundler/validation/v7/: validation_manager_v7.py
voltaire_p2p/: Cargo.toml  README.md
voltaire_p2p/network_manager/: Cargo.toml
voltaire_p2p/network_manager/src/: error.rs  lib.rs  main_bundler.rs  metrics.rs  nat.rs  router.rs  service.rs  status.rs
voltaire_p2p/p2p_network/: Cargo.toml
voltaire_p2p/p2p_network/src/: config.rs  lib.rs  listen_addr.rs
voltaire_p2p/p2p_network/src/discovery/: enr.rs  mod.rs  subnet_predicate.rs
voltaire_p2p/p2p_network/src/peer_manager/: mod.rs  network_behaviour.rs  peerdb.rs
voltaire_p2p/p2p_network/src/peer_manager/peerdb/: client.rs  peer_info.rs  score.rs
voltaire_p2p/p2p_network/src/rpc/: config.rs  handler.rs  methods.rs  mod.rs  outbound.rs  protocol.rs  rate_limiter.rs  self_limiter.rs
voltaire_p2p/p2p_network/src/rpc/codec/: base.rs  mod.rs  ssz_snappy.rs
voltaire_p2p/p2p_network/src/service/: api_types.rs  behaviour.rs  gossip_cache.rs  gossipsub_scoring_parameters.rs  mod.rs  utils.rs
voltaire_p2p/p2p_network/src/types/: globals.rs  macros.rs  mod.rs  optional.rs  optional_hex_var_list.rs  pubsub.rs  subnet.rs  topics.rs  user_ops_with_entry_point.rs  verified_useroperation.rs
voltaire_p2p/p2p_network/task_executor/src/: lib.rs
voltaire_p2p/p2p_network/types/: Cargo.toml
voltaire_p2p/p2p_network/types/src/: chain_spec.rs  enr_fork_id.rs  eth_spec.rs  lib.rs  subnet_id.rs  sync_subnet_id.rs
voltaire_p2p/p2p_network/voltaire_version/: Cargo.toml
voltaire_p2p/p2p_network/voltaire_version/src/: lib.rs
voltaire_p2p/src/: cli_args.rs  main.rs
(+5 files in other folders)
