[tool.poetry]
name = "voltaire_bundler"
version = "v0.1.0-alpha.41"
description = "EIP-4337 python Bundler"
authors = ["Candide Wallet Team"]
license = "LGPL"
readme = "README.md"
homepage = "https://github.com/candidelabs/voltaire"
repository = "https://github.com/candidelabs/voltaire"
keywords = ["4337", "account_abstraction", "ethereum", "bundler"]
classifiers = [
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
]

[tool.poetry.dependencies]
python = "^3.12"
uvloop = { version = "^0.19.0", markers = "sys_platform != 'win32'" }
eth-abi = "^5.1.0"
eth-account = "^0.13.0"
prometheus-client = "^0.20.0"
aiohttp-cors = "^0.7.0"
aiohttp = "^3.10.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
docker = "^6.1.3"
mypy = "^1.6.1"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"

[tool.poetry.scripts]
build_p2p = "scripts.build_p2p:build"
lint = "scripts.lint:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
