[tool.poetry]
name = "voltaire_bundler"
version = "v0.1.0-alpha.47"
description = "EIP-4337 python Bundler"
authors = ["Candide Wallet Team"]
license = "LGPL"
readme = "README.md"
homepage = "https://github.com/candidelabs/voltaire"
repository = "https://github.com/candidelabs/voltaire"
keywords = ["4337", "account_abstraction", "ethereum", "bundler"]
classifiers = [
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
]

[tool.poetry.dependencies]
python = "^3.13.2"
uvloop = "^0.21.0"
eth-abi = "^5.2.0"
eth-account = "^0.13.5"
prometheus-client = "^0.21.1"
aiohttp-cors = "^0.7.0"
aiohttp = "^3.11.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
docker = "^7.1.0"
mypy = "^1.15.0"
flake8 = "^7.1.2"
flake8-bugbear = "^24.12.12"

[tool.poetry.scripts]
build_p2p = "scripts.build_p2p:build"
lint = "scripts.lint:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
