[package]
name = "network_manager"
version = "0.2.0"
authors = ["Sigma Prime <contact@sigmaprime.io>"]
edition = "2021"

[dev-dependencies]
sloggers = { version = "2.1.1", features = ["json"] }
genesis = { path = "../genesis" }
matches = "0.1.8"
exit-future = "0.2.0"
slog-term = "2.6.0"
slog-async = "2.5.0"

[dependencies]
# beacon_chain =  { path = "../beacon_chain" }
# store =  { path = "../store" }
p2p_voltaire_network =  { path = "../p2p_network" }
# slot_clock = { path = "../../common/slot_clock" }
slog = { version = "2.5.2", features = ["max_level_trace"] }
hex = "0.4.2"
ethereum_ssz = "0.5.0"
ssz_types = "0.5.3"
futures = "0.3.7"
error-chain = "0.12.4"
tokio = { version = "1.14.0", features = ["full"] }
tokio-stream = "0.1.3"
smallvec = "1.6.1"
rand = "0.8.5"
fnv = "1.0.7"
rlp = "0.5.0"
lazy_static = "1.4.0"
lighthouse_metrics = { path = "../p2p_network/lighthouse_metrics" }
task_executor = { path = "../p2p_network/task_executor" }
igd = "0.12.1"
itertools = "0.10.0"
lru_cache = { path = "../p2p_network/lru_cache" }
if-addrs = "0.6.4"
strum = "0.24.0"
tokio-util = { version = "0.6.3", features = ["time"] }
derivative = "2.2.0"
delay_map = "0.3.0"
ethereum-types = { version = "0.14.1"}
parking_lot = "0.12.0"
serde-pickle = "1.1.1"
serde = { version = "1.0.144", features = ["derive"] }
bs58 = { version="0.4.0", features=["check"] }
async-trait = "0.1.74"

[features]
# NOTE: This can be run via cargo build --bin lighthouse --features network/disable-backfill
disable-backfill = []
