[package]
name = "types"
version = "0.2.1"
authors = ["Paul Hauner <paul@paulhauner.com>", "Age Manning <Age@AgeManning.com>"]
edition = "2021"

[[bench]]
name = "benches"
harness = false

[dependencies]
serde = "1.0.116"
serde_derive = "1.0.116"
ssz_types = "0.5.3"
safe_arith = { path = "../safe_arith" }
arbitrary = { version = "1.0", features = ["derive"] }
ethereum_ssz = "0.5"
ethereum_ssz_derive = "0.5"
tree_hash_derive = "0.5"
tree_hash = "0.5.0"
lazy_static = "1.4"
ethereum_serde_utils = "0.5"